--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,26 @@
 	grid-template-columns: 1fr 1fr;
 	gap: 5px;
 	position: relative;
-}
-
-.app header {
+  }
+  
+  .app header {
 	position: sticky;
 	top: 0;
 	height: max-content;
 	padding-top: 40px;
-}
+  }
+  
+  @media (max-width: 768px) {
+	.app {
+	  display: flex;
+	  flex-direction: column;
+	}
+  
+	.app header {
+	  position: static; 
+	}
 
+  }
 .app header h2{
 	margin-bottom: 1rem;
 }
@@ -90,6 +101,13 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.25em;
+}
+
+@media (max-width: 768px) {
+	.teaser-links {
+		flex-direction: row;
+		gap: 1em;
+	}
 }
 
 .teaser-links__link {
